# chunksilo

./: .env  .gitignore  AGENTS.md  NOTICE  README.md  TESTING.md  cfgload.py  chunksilo.py  config.json  config.yaml  confluence_html_formatter.py  create_test_doc.py  env.template  index.py  ingest.py  ingest_config.json  install.sh  mcp_server.py  pyproject.toml  requirements.txt  setup.sh  test_retrieval_only.py  test_system.py  universal_config.json
.continue/mcpServers/: new-mcp-server.yaml
.github/workflows/: manual-release.yml  test-functional.yml  test-indexing-benchmark.yml  test-rag-metrics.yml
config/cline-config/: .clinerules
config/roo-config/: mcp.json
opd_mcp/: __init__.py  config.py
scripts/: README.md  build-all.sh  build-snapshot.sh  build_installer.sh  generate_configs.py  manylinux_2_34-constraints.txt  package-manylinux-2_28.sh  package-manylinux-2_34.sh  prepare-common.sh  rhel8.10-constraints.txt  rhel9.7-constraints.txt  stub.sh  treesitter_demo.py
test/: EVALUATION_GUIDE.md  README.md  TESTING.md  conftest.py  optimize_retrieval.py  requirements.txt  run_tests.sh  test_chunk_location.py  test_cli.py  test_confluence_html_formatter.py  test_confluence_retrieval.py  test_docx_utils.py  test_error_handling.py  test_heading_path_integration.py  test_incremental_ingest.py  test_indexing_benchmark.py  test_indexing_ui.py  test_jira_integration.py  test_large_scale.py  test_mcp_server.py  test_quoted_phrases.py  test_rag_metrics.py  test_retrieval_only.py  test_scan_timeouts.py  test_server.py  test_system.py  test_utils.py
(+33 files in other folders)
