[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "chunksilo"
description = "RAG-based document retrieval system with MCP interface"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    {name = "Fredrik Reveny"}
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
test = {file = ["test/requirements.txt"]}
